# bath_wallpaper_preview

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md
Experiments/: Segmentation.ipynb
Views Playground/: ContentView.swift  Views_PlaygroundApp.swift
Wallpaper Previewer/: .gitignore  ContentView.swift  ContentViewModel.swift  Feature.swift  FfiBridge.h  FileHelper.swift  ImagePicker.swift  RoomInferenceHelper.swift  SegmentationVisualizationView.swift  TextureSynthesisAdapter.h  WallpaperSynthesisHelper.swift  Wallpaper_PreviewerApp.swift
Wallpaper Previewer Tests/: Wallpaper_Previewer_Tests.swift
Wallpaper Previewer UITests/: Wallpaper_Previewer_UITests.swift  Wallpaper_Previewer_UITestsLaunchTests.swift
Wallpaper Previewer.xcodeproj/: project.pbxproj
Wallpaper Previewer/Models/: GalleryType.swift  HomeSectionItem.swift  Line.swift  MediaFile.swift  Model.swift  Point.swift  Polygon.swift  RoomLayout.swift  RoomType.swift  Route.swift  TabType.swift
Wallpaper Previewer/Navigation/: NavigationManager.swift  Navigator.swift  Route.swift  View+RouteIterator.swift
Wallpaper Previewer/Screens/: FileManagerPlaygroundScreen.swift  GalleryScreen.swift  HomeScreen.swift  PreviewGenerationScreen.swift
Wallpaper Previewer/Styles/: VerticalLabelStyle.swift
Wallpaper Previewer/Utils/: FileHelper.swift  MLMultiArray+Helpers.swift  MLMultiArray+Utils.swift  Math.swift  Orientation.swift  RoomInferenceHelper.swift  RoomLayout+Conversions.swift  SeedData.swift  UIImage+Conversions.swift  UIImage+Extensions.swift  UIImage+Orientation.swift  (+2 more)
texture-synthesis/: .gitignore
texture_synthesis_adapter/: .gitignore  Cargo.toml  README.md
texture_synthesis_adapter/examples/: preview_generation.rs  tile_preparation.rs
texture_synthesis_adapter/fixtures/rooms/: layout_2.json
texture_synthesis_adapter/src/: ffi.rs  lib.rs  polygons.rs  preview.rs
(+56 files in other folders)
