[package]
name = "texture_synthesis_adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# texture-synthesis = "0.8.2"
polyfit-rs = "0.2.1"
texture-synthesis = { path = "./../texture-synthesis/lib" }
image = { version = "0.24.5", default-features = false, features = ["jpeg", "png", "bmp"] }
zerocopy = "0.6.1"
num_cpus = "1.15.0"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
lsun_res_parser = { git = "https://github.com/Rikharthu/bath_rust_lsun_res_parser" }
imageproc = "0.23.0"

[dev-dependencies]
clap = { version = "4.1.8", features = ["derive"] }
imageproc = "0.23.0"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"

[lib]
crate-type = ["staticlib"]

